# donor-management

./: README.md  pyproject.toml
.github/workflows/: ci.yml
donor_management/: hooks.py  modules.txt
donor_management/donor_management/: api.py  donor_api.py  financial.py
donor_management/donor_management/dashboard_chart/agents_based_on_agent_status/: agents_based_on_agent_status.json
donor_management/donor_management/dashboard_chart/count_of_donors_based_on_donor_type/: count_of_donors_based_on_donor_type.json
donor_management/donor_management/dashboard_chart/department_wise_agents/: department_wise_agents.json
donor_management/donor_management/dashboard_chart/department_wise_utilisation/: department_wise_utilisation.json
donor_management/donor_management/dashboard_chart/department_wise_utilisation_value/: department_wise_utilisation_value.json
donor_management/donor_management/dashboard_chart/donation_value_for_different_projects/: donation_value_for_different_projects.json
donor_management/donor_management/dashboard_chart/donation_value_received_through_different_mode_of_payment/: donation_value_received_through_different_mode_of_payment.json
donor_management/donor_management/dashboard_chart/donor_wise_projects/: donor_wise_projects.json
donor_management/donor_management/dashboard_chart/funder_by_funder_stage/: funder_by_funder_stage.json
donor_management/donor_management/dashboard_chart/funder_stage_with_funder_count/: funder_stage_with_funder_count.json
donor_management/donor_management/doctype/agent/: agent.js  agent.json  agent.py  custom.py  (+1 more)
(+158 files in other folders)
